<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp"
        card_view:contentPadding="1dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_person_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/person_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/im_content_description_person_image"
                    android:src="@drawable/image_001" />

                <RelativeLayout
                    android:id="@+id/rl_rating_ribbon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorRatingRibbonBlue"
                    android:gravity="end"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/im_star"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/im_content_description_star"
                        android:src="@drawable/ic_star_white" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@id/im_star"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_person_image"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:id="@+id/rl_task_ribbon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_person_name"
                android:layout_marginTop="5dp"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/im_trophy"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/im_content_description_trophy"
                    android:src="@drawable/ic_tasks_completed_icon" />

                <TextView
                    android:id="@+id/tv_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/im_trophy"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="-0.04"
                    android:textColor="@color/colorTaskNumbers"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>